--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+:root {
+  --color-brand: #5e5ef0;
+  --color-brand-deep: #4848f1;
+  --color-secondary: #1a0541;
+  --white: #eee;
+}
 * {
   margin: 0;
   padding: 0;
